plugins {
  id 'java'
  id 'org.springframework.boot' version '3.4.4'
  id 'io.spring.dependency-management' version '1.1.7'
  id 'com.diffplug.spotless' version '6.25.0'
}

group = 'com.lottery'
version = '0.0.1-SNAPSHOT'

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(17)
  }
}

configurations {
  compileOnly {
    extendsFrom annotationProcessor
  }
}

repositories {
  mavenCentral()
}

spotless {
  java {
    importOrder 'java', 'javax', 'org', 'com'
    removeUnusedImports()
    googleJavaFormat('1.17.0')
    target 'src/**/*.java'
    targetExclude('build/**', '**/generated/**')
  }
  format 'misc', {
    target '*.gradle', '*.md', '.gitignore'
    trimTrailingWhitespace()
    endWithNewline()
    indentWithSpaces(2)
  }
}

dependencies {
  implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
  implementation 'org.springframework.boot:spring-boot-starter-web'
  implementation 'org.springframework.boot:spring-boot-starter-validation'
  compileOnly 'org.projectlombok:lombok'
  developmentOnly 'org.springframework.boot:spring-boot-devtools'
  runtimeOnly 'com.mysql:mysql-connector-j'
  annotationProcessor 'org.projectlombok:lombok'
  testImplementation 'org.springframework.boot:spring-boot-starter-test'
  testImplementation 'org.springframework.security:spring-security-test'
  testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

  implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
  implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
  runtimeOnly 'com.h2database:h2'
  /* 내장 DB로 임시 사용하기 위해 의존성 추가 */
}

tasks.named('test') {
  useJUnitPlatform()
}

/**
 * 아직 check 파이프라인에 강제 연결하지 않음.
 * (리포맷 PR 이후에 `check` 의존성으로 묶을 예정)
 */
// tasks.named('check') { dependsOn 'spotlessCheck' }  // 다음 단계에서 활성화
